--- a/index.html
+++ b/index.html
@@ -6,10 +6,211 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>leader-board</title>
+    <!-- fontawssme -->
+    <script src="https://kit.fontawesome.com/a3a396a539.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- header start -->
+
+    <header>
+        <nav>
+
+            <div class="company-logo">
+                <img src="images/icons/logo.png" alt="">
+                <h3>Idea</h3>
+            </div>
+            <div class="profile-section">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Works</a>
+                <img src="images/icons/profile.png" alt="">
+            </div>
+
+
+        </nav>
+    </header>
+
+    <!-- header end -->
+    <main>
+        <!-- top section start -->
+        <section class="container">
+            <div class="top-player ">
+                <h2 class="section-title">Top Player</h2>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">Top-Player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">Top-Player-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">Top-Player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">Top-Player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">Top-Player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">Top-Player-6</h3>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Bolgs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thamnil">
+                            <img src="/images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blogs-info">
+                            <h3 class="blogs-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By
+                                <a href=""> Danny Sapio</a>
+                            </p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thamnil">
+                            <img src="/images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blogs-info">
+                            <h3 class="blogs-title">UI cheat sheet: list vs grids</h3>
+                            <p class="blog-author">By
+                                <a href="">  Tess Gadd</a>
+                            </p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thamnil">
+                            <img src="/images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blogs-info">
+                            <h3 class="blogs-title">7 typography tips for interface design</h3>
+                            <p class="blog-author">By
+                                <a href=""> Jeremiah Lam</a>
+                            </p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thamnil">
+                            <img src="/images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blogs-info">
+                            <h3 class="blogs-title">Your logo is copied
+                            </h3>
+                            <p class="blog-author">By
+                                <a href=""> Ferdinand Vogler</a>
+                            </p>
+                        </div>
+
+                    </article>
+
+                </div>
+            </div>
+
+        </section>
+        <!-- letast course -->
+        <section class="container">
+            <h2 class="section-title">Latest Course</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detals">
+                        <h2 class="course-title">React - The Complete Guide 2020 </h2>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star empty"></i>
+
+                            <span>4.5</span>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i> 01:30hr
+                            </div>
+
+
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detals">
+                        <h2 class="course-title">React - The Complete Guide 2020 </h2>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star empty"></i>
+
+                            <span>4.5</span>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i> 01:30hr
+                            </div>
+
+
+                        </div>
+
+
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detals">
+                        <h2 class="course-title">React - The Complete Guide 2020 </h2>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star field"></i>
+                            <i class="fas fa-star empty"></i>
+
+                            <span>4.5</span>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i> 01:30hr
+                            </div>
+
+
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+    </main>
+
 
 </body>
 
